objects/Destructive_Manifest__c.object
<CustomObject   >
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Destructive Changes</relationshipLabel>
        <relationshipName>Destructive_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metadata_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metadata Item</label>
        <referenceTo>Metadata_Item__c</referenceTo>
        <relationshipLabel>Destructive Manifests</relationshipLabel>
        <relationshipName>Destructive_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <label>Patch</label>
        <referenceTo>Patch__c</referenceTo>
        <relationshipLabel>Destructive Manifests</relationshipLabel>
        <relationshipName>Destructive_Manifests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Destructive Manifest</label>
    <nameField>
        <label>Destructive Manifest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Destructive Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>